# click-dynamic-module

./: README.md  pyproject.toml
.github/workflows/: release.yml
cli_host/: README.md  pyproject.toml
cli_host/src/cli_host/: main.py  registry.py  tui.py
plugins/hello_plugin/: README.md  pyproject.toml
plugins/hello_plugin/src/hello_plugin/: commands.py
plugins/home_plugin/: README.md  pyproject.toml
plugins/home_plugin/src/home_plugin/: commands.py
plugins/research_plugin/: README.md  pyproject.toml
plugins/research_plugin/src/research_plugin/: commands.py
