[project]
name = "cli-host"
version = "0.1.0"
description = "Main CLI application that discovers and loads click plugins via entry points"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "InquirerPy>=0.3",
]

[project.scripts]
cli-host = "cli_host.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_host"]
