[project]
name = "hello-plugin"
version = "0.1.0"
description = "Example plugin that registers a 'hello' command with the CLI host"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
]

[project.entry-points."cli_host.plugins"]
hello = "hello_plugin.commands:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_plugin"]
