[project]
name = "home-plugin"
version = "0.1.0"
description = "Plugin that registers a 'home' command with the CLI host"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
]

[project.entry-points."cli_host.plugins"]
home = "home_plugin.commands:home"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/home_plugin"]
